--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,9 +27,12 @@ body {
   padding: 10px;
   & .player-list {
     position: relative;
-    padding: 5px;
+    padding: 10px;
     width: 100%;
     background-color: rgb(234, 234, 234);
+    border: none;
+    color: $stats-text-color;
+    font-weight: 700;
   }
 }
 
@@ -50,19 +53,19 @@ body {
 
 
   & .card-stats {
-    padding: 0px 10px 10px 10px;
+    padding: 20px;
 
     & h1 {
         color: white;
         font-weight: 100;
-        padding: 10px;
         font-size: 1.6rem;
     }
     & h2 {
         color: white;
         font-weight: 100;
         font-size: 1.2rem;
-        padding: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
 
     }
 
@@ -72,7 +75,7 @@ body {
         list-style: none;
         padding: 10px;
         color: $stats-text-color;
-        font-weight: 900;
+        font-weight: 500;
     }
 
 
