--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,14 +41,22 @@ body {
   position: relative;
   height: 50%;
 
-  & .card-badge {
+  & .team-container {
     position: absolute;
     width: 30%;
     height: 30%;
     left: 65%;
     top: -15%;
-    background-color: rgb(210, 219, 219);
     border-radius: 50%;
+
+
+    & .card-img {
+      position: relative;
+      border-radius: 50%;
+      width: 100%;
+      height: 100%;
+      padding: 2px;
+    }
   }
 
 
