--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,4 @@
-$primary-color: rgb(250, 250, 250);
+$primary-color: rgb(255, 255, 255);
 $secondary-color: rgb(236, 0, 80);
 $tertiary-color: rgb(229, 237, 232);
 $stats-text-color: rgb(88, 49, 91);
@@ -16,7 +16,7 @@ body {
 
 .card {
   margin: 100px 0px 0px 100px;
-  height: 750px;
+  height: 700px;
   width: 375px;
 }
 
@@ -33,6 +33,22 @@ body {
     border: none;
     color: $stats-text-color;
     font-weight: 700;
+  }
+
+  & .player-container {
+    background:
+    radial-gradient(black 3px, transparent 4px),
+    radial-gradient(black 3px, transparent 4px),
+    linear-gradient(#fff 4px, transparent 0),
+    linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
+    linear-gradient(-45deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
+    #fff;
+    background-size: 109px 109px, 109px 109px,100% 6px, 109px 109px, 109px 109px;
+    background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
+    position: relative;
+    top: 50px;
+
+
   }
 }
 
@@ -73,7 +89,7 @@ body {
         font-weight: 100;
         font-size: 1.2rem;
         margin-top: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 30px;
 
     }
 
